@@ -1,6 +1,7 @@
 Revision history for POE-Component-NetSNMP-agent
 
         [BUGFIX] Correctly check for defined-ness of values (Robert Lemmen).
+        [DOC] Add a CAVEATS section to document the known problems.
 
 0.400   2012.11.14  (SAPER)
         [BUGFIX] Work around a bad interaction between the way Perl handles
